--- a/app/src/main/res/layout/fragment_help.xml
+++ b/app/src/main/res/layout/fragment_help.xml
@@ -30,53 +30,50 @@
                 android:text="@string/request_type"
                 android:textColor="@color/purple_500"
                 android:textSize="24sp"
-                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.110000014" />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <RadioGroup
                 android:id="@+id/request_type_rg"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="end"
-                android:layout_marginTop="8dp"
-                android:button="@null"
+                android:layout_margin="12dp"
                 android:gravity="end"
-                android:orientation="vertical"
-                app:layout_constraintBottom_toBottomOf="parent"
+                android:orientation="horizontal"
+                android:weightSum="2"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/order_type_tv"
-                app:layout_constraintVertical_bias="0.0">
+                app:layout_constraintTop_toBottomOf="@+id/order_type_tv">
 
                 <RadioButton
                     android:id="@+id/civil_defense_btn"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_height="170dp"
                     android:layout_gravity="end"
-                    android:background="?android:selectableItemBackground"
+                    android:layout_marginHorizontal="16dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/custom_radio"
                     android:button="@null"
-                    android:drawableEnd="?android:attr/listChoiceIndicatorSingle"
+                    android:drawableBottom="@drawable/ic_firefighter_truck"
                     android:fontFamily="@font/katibeh"
-                    android:layoutDirection="rtl"
-                    android:text="@string/civil_defense"
+                    android:textColor="@color/fui_transparent"
                     android:textSize="20sp" />
 
                 <RadioButton
                     android:id="@+id/ambulance_btn"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_height="170dp"
                     android:layout_gravity="end"
-                    android:background="?android:selectableItemBackground"
+                    android:layout_marginHorizontal="16dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/custom_radio"
                     android:button="@null"
-                    android:drawableEnd="?android:attr/listChoiceIndicatorSingle"
+                    android:drawableBottom="@drawable/ic_ambulance_2"
                     android:fontFamily="@font/katibeh"
-                    android:layoutDirection="rtl"
-                    android:text="@string/ambulance"
                     android:textSize="20sp" />
 
             </RadioGroup>
@@ -85,7 +82,7 @@
                 android:id="@+id/request_description_et"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="24dp"
                 android:background="@drawable/custom_input_request"
                 android:ems="10"
                 android:fontFamily="@font/katibeh"
@@ -116,7 +113,7 @@
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/request_description_et"
-                app:layout_constraintVertical_bias="0.22000003" />
+                app:layout_constraintVertical_bias="0.43" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 </layout>
