--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -33,7 +33,7 @@
             android:id="@+id/profile_container"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:visibility="invisible"
+            android:visibility="gone"
             tools:layout_editor_absoluteX="24dp"
             tools:layout_editor_absoluteY="24dp">
 
@@ -46,7 +46,8 @@
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="@+id/cardView"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.19" />
+                app:layout_constraintVertical_bias="0.19"
+                android:src="@drawable/upload_photo" />
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/cardView"
@@ -63,100 +64,107 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
 
-                    <TextView
-                        android:id="@+id/user_name"
+
+                    <ImageView
+                        android:id="@+id/imageView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="16dp"
-                        android:layout_marginEnd="16dp"
-                        android:fontFamily="@font/katibeh"
-                        android:textColor="@color/dark"
-                        android:textSize="20sp"
+                        android:layout_marginTop="24dp"
                         app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toStartOf="@+id/user_name_tv"
-                        app:layout_constraintHorizontal_bias="0.51"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0.71"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintVertical_bias="0.19" />
+                        app:layout_constraintVertical_bias="0.0"
+                        app:srcCompat="@drawable/ic_profile"
+                        app:tint="@color/darkGray" />
 
                     <TextView
-                        android:id="@+id/user_phone"
+                        android:id="@+id/user_name_textView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="16dp"
+                        android:layout_marginEnd="16dp"
                         android:fontFamily="@font/katibeh"
-                        android:textColor="@color/dark"
-                        android:textSize="20sp"
-                        app:layout_constraintEnd_toEndOf="@+id/user_name"
-                        app:layout_constraintStart_toStartOf="@+id/user_name"
-                        app:layout_constraintTop_toBottomOf="@+id/user_name" />
+                        android:textColor="@color/black"
+                        android:textSize="30sp"
+                        app:layout_constraintBottom_toBottomOf="@+id/imageView"
+                        app:layout_constraintEnd_toStartOf="@+id/imageView"
+                        app:layout_constraintTop_toTopOf="@+id/imageView"
+                        tools:text="Ahmed Fares" />
 
-                    <TextView
-                        android:id="@+id/close_person_phone"
+                    <ImageView
+                        android:id="@+id/user_ssn_imageView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="16dp"
+                        android:layout_marginTop="24dp"
+                        app:layout_constraintEnd_toEndOf="@+id/imageView"
+                        app:layout_constraintStart_toStartOf="@+id/imageView"
+                        app:layout_constraintTop_toBottomOf="@+id/imageView"
+                        app:srcCompat="@drawable/ic_id_card"
+                        app:tint="@color/darkGray" />
+
+                    <TextView
+                        android:id="@+id/user_ssn_textView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="16dp"
+                        android:fontFamily="@font/katibeh"
+                        android:textColor="@color/black"
+                        android:textSize="28sp"
+                        app:layout_constraintBottom_toBottomOf="@+id/user_ssn_imageView"
+                        app:layout_constraintEnd_toStartOf="@+id/user_ssn_imageView"
+                        app:layout_constraintTop_toTopOf="@+id/user_ssn_imageView"
+                        tools:text="2982222224535" />
+
+                    <ImageView
+                        android:id="@+id/phone_imageView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="24dp"
+                        android:src="@drawable/ic_phone"
+                        app:layout_constraintEnd_toEndOf="@+id/user_ssn_imageView"
+                        app:layout_constraintStart_toStartOf="@+id/user_ssn_imageView"
+                        app:layout_constraintTop_toBottomOf="@+id/user_ssn_imageView"
+                        app:tint="@color/darkGray" />
+
+                    <TextView
+                        android:id="@+id/phone_textView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="16dp"
+                        android:fontFamily="@font/katibeh"
+                        android:textColor="@color/blue"
+                        android:textSize="28sp"
+                        app:layout_constraintBottom_toBottomOf="@+id/phone_imageView"
+                        app:layout_constraintEnd_toStartOf="@+id/phone_imageView"
+                        app:layout_constraintTop_toTopOf="@+id/phone_imageView"
+                        tools:text="+201061462749" />
+
+                    <ImageView
+                        android:id="@+id/closePerson_phone_imageView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="24dp"
                         android:layout_marginBottom="32dp"
-                        android:fontFamily="@font/katibeh"
-                        android:textColor="@color/dark"
-                        android:textSize="20sp"
+                        android:src="@drawable/ic_close_persone"
                         app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="@+id/user_phone"
-                        app:layout_constraintStart_toStartOf="@+id/user_phone"
-                        app:layout_constraintTop_toBottomOf="@+id/user_phone"
-                        app:layout_constraintVertical_bias="0.0" />
+                        app:layout_constraintEnd_toEndOf="@+id/phone_imageView"
+                        app:layout_constraintStart_toStartOf="@+id/phone_imageView"
+                        app:layout_constraintTop_toBottomOf="@+id/phone_imageView"
+                        app:tint="@color/darkGray" />
 
                     <TextView
-                        android:id="@+id/user_name_tv"
+                        android:id="@+id/closePerson_phone_textView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginEnd="8dp"
+                        android:layout_marginEnd="16dp"
                         android:fontFamily="@font/katibeh"
-                        android:text="الاسم"
-                        android:textColor="@color/black"
-                        android:textSize="20sp"
-                        app:layout_constraintBottom_toBottomOf="@+id/user_name"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toTopOf="@+id/user_name" />
-
-                    <TextView
-                        android:id="@+id/user_phone_tv"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginEnd="8dp"
-                        android:fontFamily="@font/katibeh"
-                        android:text="رقم الجوال"
-                        android:textColor="@color/black"
-                        android:textSize="20sp"
-                        app:layout_constraintBottom_toBottomOf="@+id/user_phone"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintHorizontal_bias="1.0"
-                        app:layout_constraintStart_toEndOf="@+id/user_phone"
-                        app:layout_constraintTop_toTopOf="@+id/user_phone" />
-
-                    <TextView
-                        android:id="@+id/close_persone_phone_tv"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginEnd="8dp"
-                        android:fontFamily="@font/katibeh"
-                        android:text="رقم شخص مقرب"
-                        android:textColor="@color/black"
-                        android:textSize="20sp"
-                        app:layout_constraintBottom_toBottomOf="@+id/close_person_phone"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintHorizontal_bias="1.0"
-                        app:layout_constraintStart_toEndOf="@+id/close_person_phone"
-                        app:layout_constraintTop_toTopOf="@+id/close_person_phone" />
-
-                    <androidx.constraintlayout.widget.Barrier
-                        android:id="@+id/barrier"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        app:barrierDirection="left"
-                        app:constraint_referenced_ids="close_persone_phone_tv,user_name_tv,user_phone_tv"
-                        tools:layout_editor_absoluteX="411dp" />
-
+                        android:textColor="@color/blue"
+                        android:textSize="28sp"
+                        app:layout_constraintBottom_toBottomOf="@+id/closePerson_phone_imageView"
+                        app:layout_constraintEnd_toStartOf="@+id/closePerson_phone_imageView"
+                        app:layout_constraintTop_toTopOf="@+id/closePerson_phone_imageView"
+                        tools:text="+201061462749" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.cardview.widget.CardView>
