--- a/app/src/main/res/layout/placeholder_profile_layout.xml
+++ b/app/src/main/res/layout/placeholder_profile_layout.xml
@@ -35,73 +35,89 @@
 
             <TextView
                 android:id="@+id/view3"
-                android:layout_width="0dp"
+                android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
                 android:layout_marginEnd="16dp"
                 android:background="@color/mediumGray"
-                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintBottom_toBottomOf="@+id/user_name_tv"
                 app:layout_constraintEnd_toStartOf="@+id/user_name_tv"
-                app:layout_constraintHorizontal_bias="0.66"
+                app:layout_constraintTop_toTopOf="@+id/user_name_tv"
+                app:layout_constraintVertical_bias="0.19" />
+
+            <TextView
+                android:id="@+id/view4"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="16dp"
+                android:background="@color/mediumGray"
+                app:layout_constraintBottom_toBottomOf="@+id/view9"
+                app:layout_constraintEnd_toStartOf="@+id/view9"
+                app:layout_constraintTop_toTopOf="@+id/view9" />
+
+            <TextView
+                android:id="@+id/view5"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="16dp"
+                android:background="@color/mediumGray"
+                app:layout_constraintBottom_toBottomOf="@+id/view8"
+                app:layout_constraintEnd_toStartOf="@+id/view8"
+                app:layout_constraintTop_toTopOf="@+id/view8" />
+
+            <TextView
+                android:id="@+id/user_name_tv"
+                android:layout_width="30dp"
+                android:layout_height="wrap_content"
+                android:background="@color/mediumGray"
+                android:textColor="@color/black"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.85"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.19" />
 
             <TextView
-                android:id="@+id/view4"
-                android:layout_width="0dp"
+                android:id="@+id/view9"
+                android:layout_width="30dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:background="@color/mediumGray"
-                app:layout_constraintEnd_toEndOf="@+id/view3"
-                app:layout_constraintStart_toStartOf="@+id/view3"
-                app:layout_constraintTop_toBottomOf="@+id/view3" />
+                app:layout_constraintEnd_toEndOf="@+id/user_name_tv"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toStartOf="@+id/user_name_tv"
+                app:layout_constraintTop_toBottomOf="@+id/user_name_tv" />
 
             <TextView
-                android:id="@+id/view5"
-                android:layout_width="0dp"
+                android:id="@+id/view8"
+                android:layout_width="30dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:layout_marginBottom="32dp"
                 android:background="@color/mediumGray"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="@+id/view4"
-                app:layout_constraintStart_toStartOf="@+id/view4"
-                app:layout_constraintTop_toBottomOf="@+id/view4"
-                app:layout_constraintVertical_bias="0.0" />
-
-            <TextView
-                android:id="@+id/user_name_tv"
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:background="@color/mediumGray"
-                android:textColor="@color/black"
-                app:layout_constraintBottom_toBottomOf="@+id/view3"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/view3" />
-
-            <TextView
-                android:id="@+id/user_phone_tv"
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:background="@color/mediumGray"
-                app:layout_constraintBottom_toBottomOf="@+id/view4"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintEnd_toEndOf="@+id/view9"
                 app:layout_constraintHorizontal_bias="1.0"
-                app:layout_constraintStart_toEndOf="@+id/view4"
-                app:layout_constraintTop_toTopOf="@+id/view4" />
+                app:layout_constraintStart_toStartOf="@+id/view9"
+                app:layout_constraintTop_toBottomOf="@+id/view9" />
 
             <TextView
-                android:id="@+id/close_persone_phone_tv"
-                android:layout_width="100dp"
+                android:id="@+id/view6"
+                android:layout_width="30dp"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
                 android:background="@color/mediumGray"
-                app:layout_constraintBottom_toBottomOf="@+id/view5"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="1.0"
-                app:layout_constraintStart_toEndOf="@+id/view5"
-                app:layout_constraintTop_toTopOf="@+id/view5" />
+                app:layout_constraintEnd_toEndOf="@+id/view8"
+                app:layout_constraintStart_toStartOf="@+id/view8"
+                app:layout_constraintTop_toBottomOf="@+id/view8" />
 
+            <TextView
+                android:id="@+id/view7"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="16dp"
+                android:background="@color/mediumGray"
+                app:layout_constraintBottom_toBottomOf="@+id/view6"
+                app:layout_constraintEnd_toStartOf="@+id/view6"
+                app:layout_constraintTop_toTopOf="@+id/view6" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
