--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -10,7 +10,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/lightGray">
+        android:background="@color/gray">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -21,37 +21,18 @@
                 android:id="@+id/user_info_container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/lightGray"
-                android:padding="24dp"
-                android:visibility="visible">
+                android:padding="24dp">
 
                 <ImageView
                     android:id="@+id/app_icon"
-                    android:layout_width="120dp"
-                    android:layout_height="100dp"
-                    android:src="@drawable/ic_help"
+                    android:layout_width="160dp"
+                    android:layout_height="160sp"
+                    android:src="@mipmap/ic_launcher"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.100000024"
-                    app:layout_scrollFlags="scroll|enterAlways"
-                    app:tint="@color/purple_200" />
-
-                <TextView
-                    android:id="@+id/app_name_tv"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:fontFamily="@font/lemonada_semibold"
-                    android:text="@string/app_name"
-                    android:textColor="@color/purple_700"
-                    android:textSize="25sp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.5"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/app_icon"
-                    app:layout_scrollFlags="scroll|exitUntilCollapsed" />
+                    app:layout_constraintVertical_bias="0.060000002" />
 
 
                 <EditText
@@ -95,7 +76,7 @@
                     android:layout_marginHorizontal="30dp"
                     android:layout_marginTop="32dp"
                     android:layout_marginBottom="8dp"
-                    android:backgroundTint="@color/teal_700"
+                    android:backgroundTint="@color/blue"
                     android:fontFamily="@font/katibeh"
                     android:padding="8dp"
                     android:text="@string/signup"
@@ -120,7 +101,7 @@
                     android:paddingEnd="24dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/app_name_tv" />
+                    app:layout_constraintTop_toBottomOf="@+id/app_icon" />
 
                 <EditText
                     android:id="@+id/ssn_et"
@@ -145,7 +126,6 @@
                 android:id="@+id/verify_otp_container"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/lightGray"
                 android:visibility="gone">
 
                 <ImageView
@@ -209,6 +189,18 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/otpEditText"
                     app:layout_constraintWidth_percent="0.3" />
+
+                <ProgressBar
+                    android:id="@+id/progressBar"
+                    style="?android:attr/progressBarStyle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:visibility="invisible"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.5"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
 
             </androidx.constraintlayout.widget.ConstraintLayout>
