--- a/app/src/main/res/layout/fragment_splash.xml
+++ b/app/src/main/res/layout/fragment_splash.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/purple_700"
+    android:background="@drawable/ic_splash_background"
     tools:context=".fragments.splash.SplashFragment">
 
 
@@ -15,23 +15,25 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/lemonada_semibold"
         android:text="@string/app_name"
-        android:textColor="@color/white"
-        android:textSize="45sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.26" />
+        android:textColor="#FFFFFF"
+        android:textSize="55sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.91"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.71000004" />
 
-        <ImageView
-            android:id="@+id/app_icon"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            android:layout_marginTop="24dp"
-            android:src="@drawable/ic_help"
-            app:layout_constraintEnd_toEndOf="@+id/app_name_tv"
-            app:layout_constraintStart_toStartOf="@+id/app_name_tv"
-            app:layout_constraintTop_toBottomOf="@+id/app_name_tv"
-            app:tint="@color/yellow" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="-5dp"
+        android:src="@drawable/ic_alarm"
+        app:layout_constraintBottom_toTopOf="@+id/app_name_tv"
+        app:layout_constraintEnd_toEndOf="@+id/app_name_tv"
+        app:layout_constraintStart_toStartOf="@+id/app_name_tv" />
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
