--- a/app/src/main/res/layout/fragment_user_type.xml
+++ b/app/src/main/res/layout/fragment_user_type.xml
@@ -6,33 +6,20 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/lightGray"
+        android:background="@color/gray"
         android:padding="24dp"
         android:paddingHorizontal="40dp">
 
         <ImageView
             android:id="@+id/app_icon"
-            android:layout_width="120dp"
-            android:layout_height="100dp"
-            android:src="@drawable/ic_help"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:tint="@color/dark" />
-
-        <TextView
-            android:id="@+id/app_name_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="180dp"
+            android:layout_height="180dp"
             android:layout_marginTop="8dp"
-            android:fontFamily="@font/lemonada_semibold"
-            android:text="@string/app_name"
-            android:textColor="@color/purple_500"
-            android:textSize="25sp"
+            android:src="@mipmap/ic_launcher"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/app_icon" />
+            app:layout_constraintTop_toTopOf="parent" />
+
 
         <Button
             android:id="@+id/user_btn"
@@ -49,7 +36,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.497"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/app_name_tv" />
+            app:layout_constraintTop_toBottomOf="@+id/app_icon" />
 
         <Button
             android:id="@+id/paramedic_btn"
