--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,6 +17,6 @@
     <color name="red">#FF4646</color>
     <color name="yellow">#FFC114</color>
     <color name="green">#00C980</color>
-    <color name="gray">#939393</color>
-    <color name="blue">#0C50A3</color>
+    <color name="gray">#E8E8E8</color>
+    <color name="blue">#126A8F</color>
 </resources>
