--- a/app/src/main/res/layout/history_row_layout.xml
+++ b/app/src/main/res/layout/history_row_layout.xml
@@ -11,10 +11,9 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/requestsRowLayout"
+        android:id="@+id/historyRowLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        onRequestClickListener="@{request}"
         android:padding="4dp">
 
         <com.google.android.material.card.MaterialCardView
@@ -46,7 +45,7 @@
                     app:layout_constraintVertical_bias="1.0" />
 
                 <ImageView
-                    android:id="@+id/request_type_image"
+                    android:id="@+id/history_type_image"
                     loadImageType="@{request.type}"
                     android:layout_width="60dp"
                     android:layout_height="70dp"
@@ -57,7 +56,7 @@
                     tools:srcCompat="@tools:sample/avatars" />
 
                 <TextView
-                    android:id="@+id/description_tv"
+                    android:id="@+id/description_textview"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="12dp"
@@ -74,7 +73,7 @@
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
-                    android:id="@+id/request_status_tv"
+                    android:id="@+id/request_status_textview"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="12dp"
@@ -89,7 +88,7 @@
                     app:layout_constraintEnd_toStartOf="@+id/gray_background"
                     app:layout_constraintHorizontal_bias="1.0"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/description_tv" />
+                    app:layout_constraintTop_toBottomOf="@+id/description_textview" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </com.google.android.material.card.MaterialCardView>
     </androidx.constraintlayout.widget.ConstraintLayout>
