--- a/app/src/main/res/layout/fragment_request_detailes.xml
+++ b/app/src/main/res/layout/fragment_request_detailes.xml
@@ -39,11 +39,11 @@
                     android:layout_marginTop="12dp"
                     android:layout_marginEnd="8dp"
                     android:fontFamily="@font/katibeh"
-                    tools:text="اشعر بالتعب"
                     android:textColor="@color/black"
                     android:textSize="18sp"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:text="اشعر بالتعب" />
 
                 <TextView
                     android:id="@+id/status_textView"
@@ -52,11 +52,11 @@
                     android:layout_marginTop="16dp"
                     android:layout_marginEnd="12dp"
                     android:fontFamily="@font/katibeh"
-                    tools:text="تم الطلب"
                     android:textColor="@color/yellow"
                     android:textSize="18sp"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/request_textview" />
+                    app:layout_constraintTop_toBottomOf="@+id/request_textview"
+                    tools:text="تم الطلب" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </com.google.android.material.card.MaterialCardView>
 
@@ -100,7 +100,6 @@
                     android:layout_marginTop="8dp"
                     android:layout_marginEnd="16dp"
                     android:fontFamily="@font/katibeh"
-                    tools:text="Ahmed Fares"
                     android:textColor="@color/black"
                     android:textSize="22sp"
                     app:layout_constraintBottom_toBottomOf="@+id/user_imageView"
@@ -108,7 +107,8 @@
                     app:layout_constraintHorizontal_bias="0.65"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.16000003" />
+                    app:layout_constraintVertical_bias="0.16000003"
+                    tools:text="Ahmed Fares" />
 
                 <ImageView
                     android:id="@+id/phone_imageView"
@@ -127,12 +127,12 @@
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="16dp"
                     android:fontFamily="@font/katibeh"
-                    tools:text="+201061462749"
                     android:textColor="@color/blue"
                     android:textSize="20sp"
                     app:layout_constraintBottom_toBottomOf="@+id/phone_imageView"
                     app:layout_constraintEnd_toStartOf="@+id/phone_imageView"
-                    app:layout_constraintTop_toTopOf="@+id/phone_imageView" />
+                    app:layout_constraintTop_toTopOf="@+id/phone_imageView"
+                    tools:text="+201061462749" />
 
                 <ImageView
                     android:id="@+id/close_phone_imageView"
@@ -151,18 +151,18 @@
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="16dp"
                     android:fontFamily="@font/katibeh"
-                    tools:text="+201061462749"
                     android:textColor="@color/blue"
                     android:textSize="20sp"
                     app:layout_constraintBottom_toBottomOf="@+id/close_phone_imageView"
                     app:layout_constraintEnd_toStartOf="@+id/close_phone_imageView"
-                    app:layout_constraintTop_toTopOf="@+id/close_phone_imageView" />
+                    app:layout_constraintTop_toTopOf="@+id/close_phone_imageView"
+                    tools:text="+201061462749" />
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/medical_info_container"
-                    android:visibility="visible"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:visibility="visible"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -174,13 +174,13 @@
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="8dp"
                         android:fontFamily="@font/katibeh"
-                        tools:text="28.3"
                         android:textColor="@color/black"
                         android:textSize="18sp"
                         app:layout_constraintBottom_toBottomOf="@+id/bmi"
                         app:layout_constraintEnd_toStartOf="@+id/bmi"
                         app:layout_constraintTop_toTopOf="@+id/bmi"
-                        app:layout_constraintVertical_bias="0.0" />
+                        app:layout_constraintVertical_bias="0.0"
+                        tools:text="28.3" />
 
                     <TextView
                         android:id="@+id/bmi"
@@ -188,12 +188,12 @@
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="24dp"
                         android:fontFamily="@font/katibeh"
-                        tools:text="BMI"
                         android:textColor="@color/darkGray"
                         android:textSize="18sp"
                         app:layout_constraintBottom_toBottomOf="@+id/age_textview"
                         app:layout_constraintEnd_toStartOf="@+id/age_textview"
-                        app:layout_constraintTop_toTopOf="@+id/age_textview" />
+                        app:layout_constraintTop_toTopOf="@+id/age_textview"
+                        tools:text="BMI" />
 
                     <TextView
                         android:id="@+id/age_textview"
@@ -201,12 +201,12 @@
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="8dp"
                         android:fontFamily="@font/katibeh"
-                        tools:text="22"
                         android:textColor="@color/black"
                         android:textSize="18sp"
                         app:layout_constraintBottom_toBottomOf="@+id/age"
                         app:layout_constraintEnd_toStartOf="@+id/age"
-                        app:layout_constraintTop_toTopOf="@+id/age" />
+                        app:layout_constraintTop_toTopOf="@+id/age"
+                        tools:text="22" />
 
                     <ImageView
                         android:id="@+id/diabetic_imageView"
@@ -369,12 +369,12 @@
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="16dp"
                     android:fontFamily="@font/katibeh"
-                    tools:text="29825465566655"
                     android:textColor="@color/dark"
                     android:textSize="20sp"
                     app:layout_constraintBottom_toBottomOf="@+id/ssn_imageView"
                     app:layout_constraintEnd_toStartOf="@+id/ssn_imageView"
-                    app:layout_constraintTop_toTopOf="@+id/ssn_imageView" />
+                    app:layout_constraintTop_toTopOf="@+id/ssn_imageView"
+                    tools:text="29825465566655" />
 
 
             </androidx.constraintlayout.widget.ConstraintLayout>
@@ -384,26 +384,39 @@
             android:id="@+id/location_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
+            android:layout_marginTop="32dp"
             android:text="الخريطة"
-            app:layout_constraintBottom_toTopOf="@+id/accept_btn"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/patient_container"
-            app:layout_constraintVertical_bias="0.84000003" />
+            app:layout_constraintTop_toBottomOf="@+id/patient_container" />
 
         <Button
             android:id="@+id/accept_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="16dp"
             android:layout_marginBottom="32dp"
             android:text="استلام الطلب"
+            android:visibility="visible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/patient_container"
-            app:layout_constraintVertical_bias="0.71000004" />
+            app:layout_constraintTop_toBottomOf="@+id/location_btn"
+            app:layout_constraintVertical_bias="0.33" />
+
+        <Button
+            android:id="@+id/finish_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="32dp"
+            android:text="تم الانتهاء"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/location_btn"
+            app:layout_constraintVertical_bias="0.33" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
