--- a/app/src/main/res/drawable/custom_input_request.xml
+++ b/app/src/main/res/drawable/custom_input_request.xml
@@ -3,9 +3,9 @@
 
     <item android:state_enabled="true" android:state_focused="true">
         <shape android:shape="rectangle">
-            <size android:height="200dp" />
+            <size android:height="160dp" />
             <solid android:color="@color/white" />
-            <stroke android:width="1dp" android:color="@color/purple_500" />
+            <stroke android:width="1dp" android:color="@color/red" />
             <corners android:radius="5dp" />
         </shape>
     </item>
