--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -28,9 +28,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="24dp"
                 android:background="#00FFFFFF"
-                android:fontFamily="@font/katibeh"
+                android:fontFamily="@font/nahdi"
                 android:text="@string/sign_up"
-                android:textColor="@color/darkGray"
+                android:textColor="@color/dark"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -47,7 +47,7 @@
                 android:layout_marginHorizontal="30dp"
                 android:layout_marginTop="16dp"
                 android:backgroundTint="@color/blue"
-                android:fontFamily="@font/katibeh"
+                android:fontFamily="@font/nahdi"
                 android:paddingHorizontal="20dp"
                 android:text="@string/login"
                 android:textSize="24sp"
@@ -60,7 +60,7 @@
                 android:layout_width="200dp"
                 android:layout_height="200dp"
                 android:layout_marginTop="16dp"
-                android:src="@mipmap/ic_launcher"
+                android:src="@drawable/ic_emergency_app"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
@@ -71,10 +71,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:fontFamily="@font/katibeh"
+                android:fontFamily="@font/nahdi"
                 android:text="@string/slogan_tv"
-                android:textColor="@color/purple_700"
-                android:textSize="34sp"
+                android:textColor="@color/red"
+                android:textSize="30sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
@@ -88,7 +88,7 @@
                 android:layout_marginTop="32dp"
                 android:background="@drawable/custom_input"
                 android:ems="10"
-                android:fontFamily="@font/katibeh"
+                android:fontFamily="@font/nahdi"
                 android:hint="@string/phone"
                 android:inputType="phone"
                 android:paddingStart="24dp"
