--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -22,17 +22,18 @@
                 android:layout_height="wrap_content"
                 android:padding="24dp">
 
+
                 <ImageView
                     android:id="@+id/app_icon"
-                    android:layout_width="160dp"
-                    android:layout_height="160sp"
-                    android:src="@mipmap/ic_launcher"
+                    android:layout_width="150dp"
+                    android:layout_height="150sp"
+                    android:src="@drawable/ic_emergency_app"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.498"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.060000002" />
-
+                    app:layout_constraintVertical_bias="0.126" />
 
                 <EditText
                     android:id="@+id/personal_phone_et"
@@ -41,7 +42,7 @@
                     android:layout_marginTop="8dp"
                     android:background="@drawable/custom_input"
                     android:ems="10"
-                    android:fontFamily="@font/katibeh"
+                    android:fontFamily="@font/nahdi"
                     android:hint="@string/phone"
                     android:inputType="phone"
                     android:paddingStart="24dp"
@@ -57,7 +58,7 @@
                     android:layout_marginTop="8dp"
                     android:background="@drawable/custom_input"
                     android:ems="10"
-                    android:fontFamily="@font/katibeh"
+                    android:fontFamily="@font/nahdi"
                     android:hint="@string/phone_close_person"
                     android:inputType="phone"
                     android:paddingStart="24dp"
@@ -76,7 +77,7 @@
                     android:layout_marginTop="32dp"
                     android:layout_marginBottom="8dp"
                     android:backgroundTint="@color/blue"
-                    android:fontFamily="@font/katibeh"
+                    android:fontFamily="@font/nahdi"
                     android:padding="8dp"
                     android:text="@string/signup"
                     android:textSize="26sp"
@@ -93,7 +94,7 @@
                     android:layout_marginTop="16dp"
                     android:background="@drawable/custom_input"
                     android:ems="10"
-                    android:fontFamily="@font/katibeh"
+                    android:fontFamily="@font/nahdi"
                     android:hint="@string/full_name"
                     android:inputType="textPersonName"
                     android:paddingStart="24dp"
@@ -109,7 +110,7 @@
                     android:layout_marginTop="8dp"
                     android:background="@drawable/custom_input"
                     android:ems="10"
-                    android:fontFamily="@font/katibeh"
+                    android:fontFamily="@font/nahdi"
                     android:hint="@string/ssn"
                     android:inputType="number"
                     android:paddingStart="24dp"
@@ -146,7 +147,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="32dp"
-                    android:fontFamily="@font/katibeh"
+                    android:fontFamily="@font/nahdi"
                     android:text="رمز التأكيد"
                     android:textColor="@color/black"
                     android:textSize="28sp"
@@ -179,7 +180,8 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="32dp"
-                    android:fontFamily="@font/katibeh"
+                    android:backgroundTint="@color/blue"
+                    android:fontFamily="@font/nahdi"
                     android:padding="16dp"
                     android:text="تأكيد"
                     android:textSize="22sp"
