--- a/app/src/main/res/layout/fragment_user_type.xml
+++ b/app/src/main/res/layout/fragment_user_type.xml
@@ -15,7 +15,7 @@
             android:layout_width="180dp"
             android:layout_height="180dp"
             android:layout_marginTop="8dp"
-            android:src="@mipmap/ic_launcher"
+            android:src="@drawable/ic_emergency_app"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -26,12 +26,12 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:backgroundTint="@color/lightMediumGray"
+            android:backgroundTint="@color/blue"
             android:drawableEnd="@drawable/ic_user"
-            android:fontFamily="@font/katibeh"
+            android:fontFamily="@font/nahdi"
             android:padding="10dp"
             android:text="مستخدم"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="30sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.497"
@@ -43,12 +43,12 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:backgroundTint="@color/lightMediumGray"
+            android:backgroundTint="@color/blue"
             android:drawableEnd="@drawable/ic_paramedic"
-            android:fontFamily="@font/katibeh"
+            android:fontFamily="@font/nahdi"
             android:padding="10dp"
             android:text="مسعف"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="30sp"
             app:layout_constraintEnd_toEndOf="@+id/user_btn"
             app:layout_constraintStart_toStartOf="@+id/user_btn"
@@ -59,12 +59,12 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:backgroundTint="@color/lightMediumGray"
+            android:backgroundTint="@color/blue"
             android:drawableEnd="@drawable/ic_firefighter"
-            android:fontFamily="@font/katibeh"
+            android:fontFamily="@font/nahdi"
             android:padding="10dp"
             android:text="@string/firefighter"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="30sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/paramedic_btn"
