--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
+    <color name="sky_blue_200">#5398bf</color>
+    <color name="sky_blue_500">#156a8f</color>
+    <color name="sky_blue_700">#003f61</color>
+    <color name="red_200">#ff6346</color>
+    <color name="red_700">#a20000</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
@@ -12,11 +12,11 @@
     <color name="mediumGray">#D1D1D1</color>
     <color name="lightMediumGray">#80D1D1D1</color>
     <color name="darkGray">#4B4B4B</color>
-    <color name="dark">#313C44</color>
+    <color name="dark">#40484B</color>
     <color name="darker">#151B20</color>
-    <color name="red">#FF4646</color>
-    <color name="yellow">#FFC114</color>
-    <color name="green">#00C980</color>
+    <color name="red">#DC2619</color>
+    <color name="yellow">#FECB2C</color>
+    <color name="green">#5AB647</color>
     <color name="gray">#E8E8E8</color>
-    <color name="blue">#126A8F</color>
+    <color name="blue">#156A8F</color>
 </resources>
