--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -128,7 +128,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="32dp"
-                android:fontFamily="@font/katibeh"
+                android:fontFamily="@font/nahdi"
                 android:text="رمز التأكيد"
                 android:textColor="@color/black"
                 android:textSize="28sp"
@@ -161,7 +161,8 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="32dp"
-                android:fontFamily="@font/katibeh"
+                android:backgroundTint="@color/blue"
+                android:fontFamily="@font/nahdi"
                 android:padding="16dp"
                 android:text="تأكيد"
                 android:textSize="22sp"
